# transpose-chords-in-leadsheet

./: .gitignore  README.md  agent-history.md  pixi.toml  pyproject.toml  todo.org
.github/workflows/: test.yml
songs/: house-of-the-rising-sun.txt  scarborough-fair.txt
src/chord_transpose/: __init__.py  cli.py  transposer.py
tests/: test_transposer.py
