[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chord-transpose"
version = "0.1.0"
description = "Transpose chord symbols in whitespace-delimited text files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
transpose-chords = "chord_transpose.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
